--- a/popup/popup_mobile.css
+++ b/popup/popup_mobile.css
@@ -53,4 +53,25 @@
         margin-top: 0;
     }
 
+
+    .popup-success {
+        padding: 40px 16px;
+    }
+
+    .popup-success_icon {
+        width: 70px;
+        height: 70px;
+        background-image: url("data:image/svg+xml,%3Csvg width='70' height='70' viewBox='0 0 70 70' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='35' cy='35' r='35' fill='%234EC159'/%3E%3Cpath d='M29.1187 48.765C28.7994 48.765 28.5001 48.7148 28.2208 48.6143C27.9414 48.5153 27.682 48.3462 27.4426 48.1069L17.1466 37.8171C16.7076 37.3784 16.4977 36.8097 16.5168 36.1109C16.5376 35.4138 16.7674 34.8458 17.2064 34.4071C17.6454 33.9684 18.2041 33.749 18.8825 33.749C19.5609 33.749 20.1196 33.9684 20.5586 34.4071L29.1187 42.962L49.4114 22.6815C49.8504 22.2428 50.4195 22.0234 51.1186 22.0234C51.8162 22.0234 52.3845 22.2428 52.8235 22.6815C53.2624 23.1202 53.4819 23.6882 53.4819 24.3853C53.4819 25.0841 53.2624 25.6528 52.8235 26.0915L30.7948 48.1069C30.5553 48.3462 30.2959 48.5153 30.0166 48.6143C29.7372 48.7148 29.4379 48.765 29.1187 48.765Z' fill='white'/%3E%3C/svg%3E%0A");
+    }
+
+    .popup-success_header {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 120%;
+    }
+
+    .popup-success_text {
+        font-size: 15px;
+    }
+
 }
